# system-integration-24

./: .gitignore  README.md
00_assignments/01a_file_formats/: me.txt
00_assignments/02a_data_format_translation/: me.csv  me.txt  me.xml
00_assignments/03a_data_parsing_server/: README.md  me.json  me.yaml
00_assignments/04b_granular_access/: notes.txt
00_assignments/05b_expose_integrate_webhook_system/: README.md  app.js  package-lock.json  package.json
00_assignments/08a_document_a_database/: README.md  si_test_mro_docs.html
00_assignments/08b_migrate_db_2.0/: migrate.js  package-lock.json  package.json
00_assignments/08c_auth_integration/: README.md  app.js  package-lock.json  package.json
00_assignments/10a_graphql/: package-lock.json
00_assignments/10b_integrate_with_payment/: README.md  package-lock.json  package.json  server.js
01_miscellaneous/: encode.py  paymentiframe.html
02_data_files/: getgooglehtml.sh
03_modules/common_js_modules/: myModule.js
03_modules/html_no_models/: index.html  myModule.js
03_modules/html_with_modules/: index.html
03_modules/node_es_modules/: index.js  myModules.js
06_servers/python/: main.py  pyproject.toml
15_github_webhooks/python-webhooks/: main.py  pyproject.toml
17_multipart_forms/: index.html  nestedForms.html
17_multipart_forms/python/: main.py  pyproject.toml
18_images/: base64.html
19_audio/: index.html
20_mpeg_dash/: about.md  app.js  package-lock.json  package.json
21_mysql_backup/: backup.sql
22_database_documentation/: classicmodels_mro_docs.html
23_database_migrations/python-alembic/: pyproject.toml
(+85 files in other folders)
