[tool.poetry]
name = "first-server"
version = "0.1.0"
description = ""
authors = ["kris52h6 <kris52h6@stud.kea.dk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
