[tool.poetry]
name = "python-webhooks"
version = "0.1.0"
description = ""
authors = ["kris52h6 <kris52h6@stud.kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
